# chrometab

./: .gitignore  Cargo.toml  README.md
src/: chrome.rs  groups.rs  main.rs  platform.rs
src/tui/: events.rs  export.rs  mod.rs  ui.rs
