[[bin]]
name = "chrometab"
path = "src/main.rs"

[package]
name = "chrometab"
version = "1.0.0"
edition = "2021"
authors = [ "Hadi Cahyadi <cumulus13@gmail.com>",]
description = "A powerful CLI tool for managing Chrome tabs via Chrome DevTools Protocol"
license = "MIT"
repository = "https://github.com/cumulus13/chrometab-rust"
keywords = [ "chrome", "devtools", "browser", "automation", "cli",]
categories = [ "command-line-utilities", "development-tools",]
exclude = [ "*sublime*", "*.exe", "target/", ".pt/", "build.bat",]

[dependencies]
tokio-tungstenite = "0.21"
futures-util = "0.3"
serde_json = "1.0"
colored = "2.1"
regex = "1.10"
anyhow = "1.0"
terminal_size = "0.3"
urlencoding = "2.1"

[dependencies.tokio]
version = "1.35"
features = [ "full",]

[dependencies.serde]
version = "1.0"
features = [ "derive",]

[dependencies.reqwest]
version = "0.11"
features = [ "json",]

[dependencies.clap]
version = "4.4"
features = [ "derive", "color",]

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true

[target."cfg(windows)".dependencies.winapi]
version = "0.3"
features = [ "winuser", "processthreadsapi",]
